<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_padding_size_medium"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_size_small"
        android:gravity="center"
        android:text="@string/dialog_title"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_size_small"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name"
            style="@style/dialog_user_data"
            android:layout_marginEnd="@dimen/margin_padding_size_small"
            android:text="@string/dialog_name" />

        <TextView
            android:id="@+id/name_value"
            style="@style/dialog_user_data"
            android:text="@string/sep" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_size_small"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sex"
            style="@style/dialog_user_data"
            android:layout_marginEnd="@dimen/margin_padding_size_small"
            android:text="@string/dialog_sex" />

        <TextView
            android:id="@+id/sex_value"
            style="@style/dialog_user_data"
            android:text="@string/sep" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_size_small"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/phone_number"
            style="@style/dialog_user_data"
            android:layout_marginEnd="@dimen/margin_padding_size_small"
            android:text="@string/dialog_phone_number" />

        <TextView
            android:id="@+id/phone_number_value"
            style="@style/dialog_user_data"
            android:text="@string/sep" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_size_small"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/email"
            style="@style/dialog_user_data"
            android:layout_marginEnd="@dimen/margin_padding_size_small"
            android:text="@string/dialog_email" />

        <TextView
            android:id="@+id/email_value"
            style="@style/dialog_user_data"
            android:text="@string/sep" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_size_small"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/birthday"
            style="@style/dialog_user_data"
            android:layout_marginEnd="@dimen/margin_padding_size_small"
            android:text="@string/dialog_birthday" />

        <TextView
            android:id="@+id/birthday_value"
            style="@style/dialog_user_data"
            android:text="@string/sep" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_size_small"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/city"
            style="@style/dialog_user_data"
            android:layout_marginEnd="@dimen/margin_padding_size_small"
            android:text="@string/dialog_city" />

        <TextView
            android:id="@+id/city_value"
            style="@style/dialog_user_data"
            android:text="@string/sep" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_size_small"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/rating"
            style="@style/dialog_user_data"
            android:layout_marginEnd="@dimen/margin_padding_size_small"
            android:text="@string/dialog_rating" />

        <TextView
            android:id="@+id/rating_value"
            style="@style/dialog_user_data"
            android:text="@string/sep" />
    </LinearLayout>

    <Button
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/button_ok" />
</LinearLayout>
