<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.inputCode.InputCodeFragment">

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:theme="@style/ProgressBarStyleBlue"
        android:visibility="gone"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        app:layout_constraintVertical_bias="0.3"
        android:id="@+id/textView_input_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_code_from_sms"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_input_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_padding_size_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_input_code">

        <EditText
            android:id="@+id/input_code1"
            style="@style/input_code_style"
            android:importantForAutofill="no"
            android:imeOptions="actionNext"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/input_code2"
            style="@style/input_code_style"
            android:importantForAutofill="no"
            android:imeOptions="actionNext"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/input_code3"
            style="@style/input_code_style"
            android:importantForAutofill="no"
            android:imeOptions="actionNext"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/input_code4"
            style="@style/input_code_style"
            android:importantForAutofill="no"
            android:imeOptions="actionDone"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <TextView
        android:id="@+id/repeat_sms_code"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_padding_size_large"
        android:gravity="center"

        android:text="@string/repeat_sms_code"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_input_code"/>

    <Button
        android:id="@+id/button_repeat_sms_code"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_padding_size_medium"
        android:layout_marginVertical="@dimen/margin_padding_size_small"
        android:backgroundTint="@color/blue"
        android:paddingVertical="@dimen/margin_padding_size_medium"
        android:text="@string/button_repeat_sms_code"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_small"
        android:visibility="gone"

        app:layout_constraintTop_toBottomOf="@id/layout_input_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_padding_size_medium"
        android:layout_marginVertical="@dimen/margin_padding_size_small"
        android:backgroundTint="@color/blue"

        android:paddingVertical="@dimen/margin_padding_size_medium"
        android:text="@string/button_input_code_done"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>