<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".ui.inputNumber.InputNumberFragment">

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:theme="@style/ProgressBarStyleWhite"
        android:visibility="gone"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:src="@drawable/round_car"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:shapeAppearanceOverlay="@style/Circular" />

    <LinearLayout
        android:id="@+id/input_number_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"

        app:layout_constraintBottom_toTopOf="@id/button_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_padding_size_medium"

            android:background="@color/blue"
            android:hint="@string/input_phone_number"
            android:textColorHint="@color/white"
            android:textSize="@dimen/text_size_large"

            app:boxBackgroundColor="@color/blue"
            app:boxStrokeColor="@color/white"
            app:errorEnabled="true"
            app:helperTextEnabled="true"
            app:hintTextAppearance="@style/TextLabel"
            app:hintTextColor="@color/white"
            app:prefixText="+7"
            app:prefixTextAppearance="@style/TextAppearance.AppCompat.Large"
            app:prefixTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_size_medium"
                android:inputType="phone"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textCursorDrawable="@color/white"
                android:textSize="@dimen/text_size_large" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


    <Button
        android:id="@+id/button_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_padding_size_medium"
        android:layout_marginVertical="@dimen/margin_padding_size_small"
        android:backgroundTint="@color/white"
        android:paddingVertical="@dimen/margin_padding_size_medium"

        android:text="@string/button_input_number_continue"
        android:textColor="@color/blue"
        android:textSize="@dimen/text_size_medium"

        app:layout_constraintBottom_toTopOf="@+id/warning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/warning"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_padding_size_small"
        android:gravity="center"

        android:text="@string/warning"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_small"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>